# chrome-extension

./: index.html  manifest.json  package.json  pnpm-lock.yaml  vite.config.ts.timestamp-1717720762167-0f5932c1af7b6.mjs
Documents/ELEC376_PROJECT/: CMakeLists.txt
Documents/ELEC379/: app.py  command.txt  insertionSort.c  mergeSort.c
Documents/ELEC379/week 1/: examplePointer.c  exampleProblemLecture1.c
Documents/architect/: package.json
Documents/chatapplication/: index.html  package.json  pnpm-lock.yaml
Documents/chrome-extension/: package.json
Documents/chrome_ext/: package.json
Documents/new-notnext-extension/: package.json
Documents/reactApp/: README.md
public/: manifest.json
src/: App.tsx  globals.css  main.tsx
src/components/: BackgroundChange.tsx
